Fix header spacing

--- a/app/assets/stylesheets/header_styles.scss
+++ b/app/assets/stylesheets/header_styles.scss
@@ -72,7 +72,6 @@ div.user-options {
   position: absolute;
   z-index: 1;
   top: 80px;
-  padding: 0px 40px;
 }
 
 div.user-options a {
